--- a/androidApp/src/main/res/values/strings.xml
+++ b/androidApp/src/main/res/values/strings.xml
@@ -1,4 +1,8 @@
 <?xml version="1.0" encoding="utf-8"?>
 <resources>
     <string name="app_title">Flickr Search</string>
+    <string name="photo_not_found">Photo not found</string>
+    <string name="go_back">Go back</string>
+    <string name="photo_details_title">Photo</string>
+    <string name="download">Download</string>
 </resources>
